--- a/03.button-neon/index.html
+++ b/03.button-neon/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Button Neon</title>
-    <link rel="stylesheet" href="/button-neon/neon.css">
+    <link rel="stylesheet" href="/03.button-neon/neon.css">
 </head>
+
 <body>
     <button>know more</button>
 </body>
+
 </html>
